# AI-coding-Agent

./: README.md  call_function.py  main.py  pyproject.toml  rebuild.sh
calculator/: calculator.py
functions/: get_file_content.py  get_files_info.py  run_python.py  run_shell.py  write_file.py
